[package]
name = "impl_index"
version = "1.0.1"
edition = "2021"
rust-version = "1.60.0"
authors = [
  "Artūras Molčanovas <amolc@pm.me>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Macro for deriving the Index trait"
repository = "https://github.com/Alorel/impl_index-rs"
keywords = []
categories = []
include = [
  "src/",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "doc_cfg",
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(doc_cfg)'] }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
